@@ -2,6 +2,8 @@
 * Upgraded TreeLikelihood interfaces and SubstitutionModel interface + code lifting.
 * New class TreeLikelihoodTools
 * Added computation of expected ancestral frequencies.
+* Added computation of ancestral frequencies using an empirical bayesian
+  approach.
 
 27/06/09 Céline Scornavacca & Julien Dutheil
 * Newick and Nexus tree output now use polymorphism in order to print
